[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.26.0-github-incoherent-2-incoherent-harder"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"


[package]
name = "sometest"
version = "0.0.15"
edition = "2021"

repository = "https://github.com/duckinator/fakerepo"

[dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
